# my-vocabulary

./: .gitignore  CMakeLists.txt  README.md
doc/: README.md  ToDo.md  project_managment.md  stage_1.md  stage_2.md
profile/: myVocabulary.xml  stopWords.txt
res/: vocabulary.xml
src/: CMakeLists.txt  articlemaker.cpp  articlemaker.h  articlepad.cpp  articlepad.h  databasemanager.cpp  databasemanager.h  fileIO.cpp  fileIO.h  learningmodel.cpp  learningmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  myschemehandler.cpp  myschemehandler.h  resource.qrc  translatearea.cpp  translatearea.h  vacabularytest.cpp  vacabularytest.h  vocabularytest.cpp  vocabularytest.h  webview.cpp  webview.h  word.cpp  word.h  wordMap.cpp  wordMap.h  wordProcess.cpp  wordProcess.h  wordprocess.cpp  wordprocess.h
src/rsc/: articleJS.js  articleStyle.css  audioPlayer.js  version.txt  vocabulary.db  vocabulary.xml
